--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
       "import": "./dist/index.js",
       "types": "./dist/index.d.ts"
     },
+    "./client": {
+      "import": "./dist/client.js",
+      "types": "./dist/client.d.ts"
+    },
     "./tailwind": {
       "require": "./dist/tailwind/plugin.js"
     },
@@ -23,7 +27,7 @@
   },
   "scripts": {
     "build": "npm run build:js && npm run build:types && npm run build:css && npm run build:tailwind",
-    "build:js": "bun build ./src/index.ts --outdir ./dist --target browser",
+    "build:js": "bun build ./src/index.ts --outdir ./dist --target browser --external react --external react-dom --external react/jsx-runtime && sed -i '' 's/\"use client\";/\\/\\/ removed use client/g' ./dist/index.js && echo \"'use client';\" > ./dist/temp.js && cat ./dist/index.js >> ./dist/temp.js && mv ./dist/temp.js ./dist/index.js && bun build ./src/client.ts --outdir ./dist --target browser --external react --external react-dom --external react/jsx-runtime && sed -i '' 's/\"use client\";/\\/\\/ removed use client/g' ./dist/client.js && echo \"'use client';\" > ./dist/temp.js && cat ./dist/client.js >> ./dist/temp.js && mv ./dist/temp.js ./dist/client.js",
     "build:types": "tsc --emitDeclarationOnly --outDir dist",
     "build:css": "mkdir -p dist/styles && cp src/styles/*.css dist/styles/",
     "build:tailwind": "mkdir -p dist/tailwind && cp src/tailwind/plugin.js dist/tailwind/",
@@ -33,7 +37,7 @@
     "lint": "eslint src --ext .ts,.tsx",
     "format": "prettier --write \"src/**/*.{ts,tsx}\"",
     "typecheck": "tsc --noEmit",
-    "example": "cd examples/nextjs && bun run dev"
+    "example": "cd examples && bun run nextjs"
   },
   "keywords": [
     "e-commerce",
@@ -50,16 +54,13 @@
     "type": "git",
     "url": "https://github.com/vrybakk/shopcore.git"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@types/bun": "latest",
-    "@types/react": "^18.2.0",
-    "@types/react-dom": "^18.2.0",
+    "@types/react": "^19.0.10",
+    "@types/react-dom": "^19.0.4",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.0.0",
@@ -68,12 +69,14 @@
     "eslint-plugin-react-hooks": "^4.0.0",
     "jsdom": "^26.0.0",
     "prettier": "^3.0.0",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "typescript": "^5.0.0",
     "vitest": "^3.0.7"
   },
   "peerDependencies": {
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
+    "react": "^18.0.0 || ^19.0.0",
+    "react-dom": "^18.0.0 || ^19.0.0",
     "typescript": "^5.0.0"
   }
 }
